# wasmedge-verify

./: CMakeLists.txt  README.md  invalid.wasm
cmake/: FindWasmEdge.cmake
docs/: design.md
src/: cli.cpp  cli.h  commands.h  main.cpp  parse.cpp  validate.cpp
tests/: test_cli.sh
